Case Study video fill fix. (Stretches a little.)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -348,8 +348,9 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
   } */
 
   .sharjah-reel video {
-    min-height: 100vh !important;
-    max-width: auto !important;
+    height: 100vh !important;
+    width: 100% !important;
+    object-fit: fill;
     pointer-events: none !important;
   }
 
